        oldClass() will return the S3 class for S4 objects with slot
        .S3Class.

    o	clip() takes extra steps to avoid the next graphics call
	resetting the clip region.

    o	New function sample.int() to provide documented access to the
	internal part of sample() (sampling from seq_len(n)).

    o	New version of withVisible() for better handling of cases like
	withVisible(eval.parent(....)).

    o	showClass() which is also used to auto-print class definitions, now
	mentions the package where the class comes from, if there is one.

    o	simulate(obj) now also works for "glm" objects and for
	weighted fits, thanks in part to contributions from Ben Bolker
	and Heather Turner. 

    o	S4 classes that inherit from any of the "structure" classes or
        from "vector" will turn on methods for all the "Ops" group of
        functions when the package containing the classes is
        loaded. See class?structure.

    o	A mechanism now allows S4 classes to inherit from object types
        "environment", "externalptr" and symbol ("name").  See ?setClass.

    o	demo() gains 'echo' and 'ask' arguments, with defaults similar
	to example().

    o	library() no longer checks for the packages merged during the
	re-organization of 1.9.0.


DEPRECATED & DEFUNCT

    o	allGenerics() is defunct.

    o	Use of allocVector(CHARSXP ...) is defunct and gives an error.

    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.

    o	Support for versioned installs (R CMD INSTALL --with-package-versions
	and install.packages(installWithVers = TRUE)) has been removed.

    o	The numeric and power(0.5) forms of argument to make.link()
	which were deprecated in 2.4.0 are now defunct: use power()
	directly.

    o	Conversion to Sd and Ssgm by R CMD Rdconv is now defunct.


UTILITIES

    o	R CMD build now also uses a Makevars[.win] file for cleaning
	up src/.

    o	R CMD Rd2dvi and R CMD check are now able to cope with Cyrillic